src/ui/snapshots/lazyllm__ui__tests__snapshot_app_with_conversation.snap
---
source: src/ui/mod.rs
expression: output
---
 Model: gpt-4o  Provider: openai  MCP: 0 servers
────────────────────────────────────────────────────────────────────────────────
┌ Chats ────────────────┐┌ Chat ───────────────────────────────────────────────┐
│> New Chat             ││                                            Hello! ▐ │
│                       ││                                                     │
│                       ││───                                                  │
│                       ││                                                     │
│                       ││▌ Hi there! How can I help you today?                │
│                       ││                                                     │
│                       ││───                                                  │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
┌ Input [NORMAL] ──────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL   q:quit  i:insert  /:search  Tab:focus  j/k:scroll  ?:help
