src/ui/snapshots/lazyllm__ui__tests__snapshot_empty_app.snap
---
source: src/ui/mod.rs
expression: output
---
 Model: gpt-4o  Provider: openai  MCP: 0 servers
────────────────────────────────────────────────────────────────────────────────
┌ Chats ────────────────┐┌ Chat ───────────────────────────────────────────────┐
│> New Chat             ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
┌ Input [NORMAL] ──────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL   q:quit  i:insert  /:search  Tab:focus  j/k:scroll  ?:help
