src/ui/snapshots/lazyllm__ui__tests__snapshot_insert_mode.snap
---
source: src/ui/mod.rs
expression: output
---
 Model: gpt-4o  Provider: openai  MCP: 0 servers
────────────────────────────────────────────────────────────────────────────────
┌ Chats ────────────────┐┌ Chat ───────────────────────────────────────────────┐
│> New Chat             ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
┌ Input [INSERT] ──────────────────────────────────────────────────────────────┐
│Hello                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
 INSERT   Esc:normal  Enter:send  type to compose
